; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/oprofile/extr_op_model_p4.c_p4_stop.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/oprofile/extr_op_model_p4.c_p4_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.op_msrs = type { i32 }

@num_counters = common dso_local global i32 0, align 4
@reset_value = common dso_local global i32* null, align 8
@p4_counters = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.op_msrs*)* @p4_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @p4_stop(%struct.op_msrs* %0) #0 {
  %2 = alloca %struct.op_msrs*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.op_msrs* %0, %struct.op_msrs** %2, align 8
  %7 = call i32 (...) @get_stagger()
  store i32 %7, i32* %5, align 4
  store i32 0, i32* %6, align 4
  br label %8

8:                                                ; preds = %43, %1
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @num_counters, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %46

12:                                               ; preds = %8
  %13 = load i32*, i32** @reset_value, align 8
  %14 = load i32, i32* %6, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %12
  br label %43

20:                                               ; preds = %12
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @p4_counters, align 8
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* %6, align 4
  %24 = call i64 @VIRT_CTR(i32 %22, i32 %23)
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* %3, align 4
  %29 = load i32, i32* %4, align 4
  %30 = call i32 @rdmsr(i32 %27, i32 %28, i32 %29)
  %31 = load i32, i32* %3, align 4
  %32 = call i32 @CCCR_SET_DISABLE(i32 %31)
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** @p4_counters, align 8
  %34 = load i32, i32* %5, align 4
  %35 = load i32, i32* %6, align 4
  %36 = call i64 @VIRT_CTR(i32 %34, i32 %35)
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i64 %36
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load i32, i32* %3, align 4
  %41 = load i32, i32* %4, align 4
  %42 = call i32 @wrmsr(i32 %39, i32 %40, i32 %41)
  br label %43

43:                                               ; preds = %20, %19
  %44 = load i32, i32* %6, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %6, align 4
  br label %8

46:                                               ; preds = %8
  ret void
}

declare dso_local i32 @get_stagger(...) #1

declare dso_local i32 @rdmsr(i32, i32, i32) #1

declare dso_local i64 @VIRT_CTR(i32, i32) #1

declare dso_local i32 @CCCR_SET_DISABLE(i32) #1

declare dso_local i32 @wrmsr(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
